Teamwork SUDOSU/Project-001-Roman-Numerals-Converter/cfnclass.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.

Parameters:
  paramKP:
    Description: Select Your Key
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  myIns:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref paramKP
      ImageId: ami-033b95fb8079dc481
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref mySG
      UserData: !Base64 |
        #!/bin/bash -ex
        yum update -y
        yum install python3 -y
        pip3 install flask
        cd /home/ec2-user
        mkdir roman-project && cd roman-project
        wget https://raw.githubusercontent.com/HRNGR/myclarusway/main/aws/projects/Project-001-Roman-Numerals-Converter/app.py
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/HRNGR/myclarusway/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/HRNGR/myclarusway/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/result.html
        cd ..
        python3 app.py
      Tags:
        - Key: Name
          Value: !Sub Web Server Of ${AWS::StackName}

  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP # Required
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
